# medsync-app

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/testes/: test_integracao.py  test_main.py
