[project]
name = "medsync-app"
version = "0.1.0"
description = "Sistema de Gerenciamento de Medicamentos MedSync"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest",
    "ruff",
    "requests",
    "streamlit",
    "supabase"
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
